# ferchat-api-rust

./: .gitignore  Cargo.toml  Dockerfile
.devcontainer/: Dockerfile  devcontainer.json
.zed/: tasks.json
database_docker/: compose.yml
src/: controllers.rs  main.rs  models.rs  util.rs
src/controllers/: auth.rs  catchers.rs  chat.rs  friends.rs  options.rs  session.rs  users.rs
src/models/: chat_server.rs  event_server.rs  friendship.rs  request_models.rs  response.rs  response_models.rs  traits.rs  user.rs
src/models/request_models/: friend_acc_request.rs  friend_req_request.rs  login_request.rs  msg_request.rs  signup_request.rs
src/models/response_models/: login_response.rs
src/util/: cors.rs  crypt.rs  jwt.rs  macros.rs  regex_validators.rs  sql.rs
tests/: chat-client-receive-a.py  chat-client-receive-b.py  chat-client-send-a.py  chat-client-send-b.py  send-msg.py  stress-test.py  test-api.py
