[package]
name = "ferchat-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ws = { package = "rocket_ws", version = "0.1.1" }
rocket = { version = "0.5.1", features = ["json"] }
mysql = "25.0.1"
bcrypt = "0.15.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
